11M08O25N_11A23, resolve header overflow issue.

--- a/Client/src/Component/Header/Responsive-Header.css
+++ b/Client/src/Component/Header/Responsive-Header.css
@@ -18,16 +18,13 @@
 }
 
 @media (max-width: 430px) {
-    header {
-        position: fixed;
-    }
 
     .navbar .navigate-link {
         display: none;
     }
 
     .navbar .headerIcon {
-        display: flex;
+        display: contents;
     }
 
     .icon {
